Fix agent and department create from modal

--- a/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
@@ -75,7 +75,7 @@
                           </label>
                           <angular2-multiselect
                             id="department" name="departmentId"
-                            [data]="(afterLoginState | async).department.list"
+                            [data]="deptList"
                             [(ngModel)]="agent.departmentId" [settings]="dropdownSettings" required>
                             <c-badge>
                               <ng-template let-item="item">
