--- a/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
+++ b/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
@@ -58,7 +58,7 @@
                       </label>
                       <angular2-multiselect
                         id="agents" name="agentIds"
-                        [data]="(afterLoginState | async).agent.list"
+                        [data]="agentList"
                         [(ngModel)]="dep.agents" [settings]="dropdownSettings"
                       >
                         <c-badge>
