Fixed user profile

--- a/src/app/core/layout/inner-pages/dashboard/dashboard.component.html
+++ b/src/app/core/layout/inner-pages/dashboard/dashboard.component.html
@@ -171,7 +171,7 @@
           </div>
         </div>
 
-      <div class="col-lg-3 col-xs-12" *ngIf="widgetLists.length > 0">
+      <div class="col-lg-3 col-xs-12" *ngIf="widgetLists && widgetLists.length > 0">
         <div class="box box-info">
           <div class="box-header ui-sortable-handle" style="cursor: move;">
             <i class="fa fa-envelope"></i>
